	tmux renamew -t1:0 newname		(session 1, window 0)
	tmux renamew -t1: newname		(session 1, current window)
	tmux renamew -t/dev/ttypi newname	(client /dev/ttypi's current
						 session and window)
	tmux renamew -t/dev/ttypi: newname	(client /dev/ttypi's current
						 session and window)
	tmux renamew -t/dev/ttypi:0 newname	(client /dev/ttypi's current
						 session, window 0)

* Infrastructure for printing arguments in list-keys output. Easy ones only for
  now.

04 June 2008

* Add some vi(1) key bindings in copy mode, and support binding ^[, ^\, ^]
  ^^ and ^_. Both from/prompted by Will Maier.
* setw monitor-activity and set status without arguments now toggle the current
  value; suggested by merdely.
* New command set-window-option (alias setw) to set the single current window
  option: monitor-activity to determine whether window activity is shown in
  the status bar for that window (default off).
* Change so active/bell windows are inverted in status line.
* Activity monitoring - window with activity are marked in status line. No
  way to disable this/filter windows yet.
* Brought select-window command into line with everything else; it now uses
  -i for the window index.
* Strings to display on the left and right of the status bar may now be set
  with the status-left and status-right options. These are passed through
  strftime(3) before being displayed. The status bar is automatically updated
  at an interval set by the status-interval option. The default is to display
  nothing on the left and the date and time on the left; the default update
  interval is 15 seconds.

03 June 2008

* Per session options. Setting options without specifying a session sets the
  global options as normal (global options are inherited by all sessions);
  passing -c or -s will set the option only for that session.
* Because a client has a session attached, any command needing a session can
  take a client and use its session. So, anything that used to accept -s now